# Buildathon_26

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml  requirements.txt  test_layer_0.py  test_layer_1.py  test_layer_2.py  test_pipeline.py  test_sandbox.py
backend/agents/: base.py  chunker.py  llm.py
backend/api/: routes.py  sse.py
backend/config/: personas.py  settings.py
backend/graph/: output.py  pipeline.py
backend/graph/layer_0/: EXAMPLE_DATA_FORMAT.md  node.py  templates.py
backend/graph/layer_1/: financial_inference.py  node.py  reduce.py  trend_inference.py
backend/graph/layer_2/: analyst_agent.py  node.py  reduce.py
backend/graph/sandbox/: conversation.py  critic.py  decision_maker.py  orchestrator.py  scoring.py  subgraph.py
backend/models/: enums.py  schemas.py  state.py
backend/output/pipeline/AAPL/: f1_financial_inference.md  f2_trend_inference.md  final_rankings.json  final_rankings.md  financial_data_raw.md  news_data_raw.md
backend/output/pipeline/AAPL/moves/: m1.md  m2.md  m3.md  m4.md  m5.md  m6.md
backend/output/pipeline/AAPL/sandbox/m2/: conversation_logs.json  i1_D1_Growth_Strategist.md  i2_D2_Operational_Pragmatist.md  i3_D3_Stakeholder_Value_Advocate.md  scores.json  scores.md
backend/output/pipeline/AAPL/sandbox/m3/: conversation_logs.json  i1_D1_Growth_Strategist.md  i2_D2_Operational_Pragmatist.md  i3_D3_Stakeholder_Value_Advocate.md  scores.json  scores.md
backend/output/pipeline/AAPL/sandbox/m4/: SKIPPED.txt
backend/sandbox/: blaxel_manager.py
backend/utils/: documents.py  logger.py
(+54 files in other folders)
